--- a/index.html
+++ b/index.html
@@ -413,11 +413,10 @@
 
             <div class="bg-white p-5 border-2 border-black shadow-[6px_6px_0px_0px_rgba(124,58,237,1)]">
               <ul class="text-xs md:text-sm text-gray-700 space-y-4 font-bold uppercase tracking-tight">
-                <li class="flex items-start gap-2 border-b border-gray-50 pb-2"><span>✔</span> <span>Automated Refresh:
+                <li class="flex items-start gap-2 border-b border-gray-50 pb-2"><span>✔</span> <span>Interactive Slicers: Quick Filtering
                     One-Click Update</span></li>
-                <li class="flex items-start gap-2 border-b border-gray-50 pb-2"><span>✔</span> <span>Power Query ETL:
-                    Extract & Transform</span></li>
-                <li class="flex items-start gap-2"><span>✔</span> <span>Scalable Connection: Handles Large Data</span>
+                <li class="flex items-start gap-2 border-b border-gray-50 pb-2"><span>✔</span> <span>Dynamic Charts: Real-time Visualization</span></li>
+                <li class="flex items-start gap-2"><span>✔</span> <span>User-Friendly: Zero Technical Skill Needed</span>
                 </li>
               </ul>
             </div>
